# imageslapper

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
src/: lib.rs  main.rs
src/builders/: batch.rs  mod.rs
src/geometry/: coordinate.rs  mod.rs  rectangle.rs
src/helpers/: code128.rs  mod.rs
src/io/: images.rs
src/primitive/: delta_buffer.rs  layer.rs  mod.rs
src/rendering/: draw.rs
src/text/: helpers.rs  mod.rs
