[package]
name = "imageslapper"
version = "0.1.0"
edition = "2024"
description = "A tool for processing and manipulating images with parallelism and advanced rendering."
license = "AGPL-3.0-or-later"
repository = "https://github.com/ofluffydev/imageslapper"
readme = "README.md"
keywords = ["image-processing", "parallel", "rendering", "rust"]
categories = ["graphics", "image-processing", "command-line-utilities"]

[dependencies]
image = "0.25.6"
rayon = "1.10.0"
rgb = "0.8.50"
rusttype = "0.9.3"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
